Add log levels to README.md

--- a/examples/example-spring-boot-starter-web/src/main/resources/application.properties
+++ b/examples/example-spring-boot-starter-web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 openapi.validation.sample-rate=1
 openapi.validation.specification-file-path=openapi.yaml
+openapi.validation.violation-log-level=
 openapi.validation.excluded-paths=/_readiness,/_liveness,/_metrics
 openapi.validation.validation-report-throttle-wait-seconds=10
 openapi.validation.validation-report-metric-name=openapi_error
