--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check:
-    runs-on: [self-hosted, small]
+    runs-on: [self-hosted, java-small]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
