--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     uses: ./.github/workflows/check.yml
   publish:
     needs: check
-    runs-on: [self-hosted, small]
+    runs-on: [self-hosted, java-small]
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
