--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
+    alias(libs.plugins.nexus.publish)
 }
 
 def javaVersion = providers.environmentVariable("JAVA_BUILD_VERSION").getOrElse("17")
@@ -24,7 +24,7 @@ allprojects {
 }
 
 subprojects {
-    if(it.parent.name == 'examples') {
+    if(it.parent.name == 'examples' || it.parent.name == 'test') {
         apply plugin: 'java'
     } else {
         apply plugin: 'java-library'
@@ -32,14 +32,14 @@ subprojects {
 
         dependencies {
             // Testing
-            testImplementation "org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion"
-            testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion"
-            testImplementation "org.mockito:mockito-core:$mockitoVersion"
-            testImplementation "org.mockito:mockito-junit-jupiter:$mockitoVersion"
+            testImplementation(libs.junit.jupiter.api)
+            testImplementation(libs.junit.jupiter.engine)
+            testImplementation(libs.mockito.core)
+            testImplementation(libs.mockito.junit.jupiter)
         }
 
         jacoco {
-            toolVersion = jacocoVersion
+            toolVersion = "0.8.7"
         }
 
         jacocoTestReport {
@@ -60,21 +60,21 @@ subprojects {
 
     dependencies {
         // Lombok annotations to reduce boilerplate code
-        compileOnly "org.projectlombok:lombok:$lombokVersion"
-        annotationProcessor "org.projectlombok:lombok:$lombokVersion"
-        testCompileOnly "org.projectlombok:lombok:$lombokVersion"
-        testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
+        compileOnly(libs.lombok)
+        annotationProcessor(libs.lombok)
+        testCompileOnly(libs.lombok)
+        testAnnotationProcessor(libs.lombok)
     }
 
     checkstyle {
-        toolVersion = checkstyleVersion
+        toolVersion = "8.44"
         configDirectory.set(file("$rootProject.projectDir/config"))
         checkstyleMain.source = "src/main/java"
     }
 
     pmd {
+        toolVersion = "6.55.0"
         consoleOutput = true
         ruleSets = ["$rootDir/ruleset.xml"]
-        toolVersion = pmdVersion
     }
 }
