--- a/metrics-reporter/metrics-reporter-datadog/build.gradle
+++ b/metrics-reporter/metrics-reporter-datadog/build.gradle
@@ -3,5 +3,5 @@ apply from: "${rootDir}/gradle/publish-module.gradle"
 dependencies {
     api project(':openapi-validation-api')
 
-    implementation "com.datadoghq:java-dogstatsd-client:$datadogStatsdVersion"
+    implementation(libs.datadog.statsdclient)
 }
