--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,10 @@ commons-codec = "1.16.0"
 find-bugs = "3.0.2"
 gradle-nexus-publish-plugin = "1.3.0"
 datadog-statsd = "2.13.0"
+# Verify
+checkstyle = "8.44"
+pmd = "6.55.0"
+jacoco = "0.8.7"
 # Testing
 mockito = "4.11.0"
 junit-jupiter = "5.9.1"
@@ -24,7 +28,6 @@ lombok = { group = "org.projectlombok", name = "lombok", version.ref = "lombok" 
 datadog-statsdclient = { group = "com.datadoghq", name = "java-dogstatsd-client", version.ref = "datadog-statsd" }
 commons-codec = { group = "commons-codec", name = "commons-codec", version.ref = "commons-codec" }
 find-bugs = { group = "com.google.code.findbugs", name = "jsr305", version.ref = "find-bugs" }
-
 # Testing
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 mockito-junit-jupiter = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
@@ -34,6 +37,6 @@ junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engi
 
 [plugins]
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
-spring-dependencyManagement = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
+spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
 openapi-generator = { id = "org.openapi.generator", version.ref = "openapi-generator" }
 nexus-publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "gradle-nexus-publish-plugin" }
