--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         dependencies {
             // Testing
             testImplementation(libs.junit.jupiter.api)
-            testImplementation(libs.junit.jupiter.engine)
+            testRuntimeOnly(libs.junit.jupiter.engine)
             testImplementation(libs.mockito.core)
             testImplementation(libs.mockito.junit.jupiter)
         }
