add integration tests

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ subprojects {
         toolVersion = libs.versions.checkstyle.get()
         configDirectory.set(file("$rootProject.projectDir/config"))
         checkstyleMain.source = "src/main/java"
+        checkstyleMain.exclude('**/build/generated/**')
+        checkstyleTest.source = "src/main/java"
+        checkstyleTest.exclude('**/build/generated/**')
     }
 
     pmd {
