add missing dependency

--- a/test/test-utils/build.gradle
+++ b/test/test-utils/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     // TODO use spotbugs instead and also apply to all modules?
     implementation(libs.find.bugs)
 
+    compileOnly 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.springframework:spring-web'
 }
