--- a/settings.gradle
+++ b/settings.gradle
@@ -13,3 +13,7 @@ include(':metrics-reporter:metrics-reporter-datadog-spring-boot')
 include(':examples:examples-common')
 include(':examples:example-spring-boot-starter-web')
 include(':examples:example-spring-boot-starter-webflux')
+
+include(':test:openapi-web')
+include(':test:openapi-webflux')
+include(':test:test-utils')
