--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,10 @@ updates:
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
+    ignore:
+      - dependency-name: org.openapi.generator
+        versions:
+          - '>= 7.5.0'
+      - dependency-name: org.openapitools:openapi-generator-gradle-plugin
+        versions:
+          - '>= 7.5.0'
