--- a/.github/workflows/repository-maintenance.yml
+++ b/.github/workflows/repository-maintenance.yml
@@ -2,12 +2,25 @@ name: Repository Maintenance
 
 on:
   push:
+    branches: [ 'main' ]
   workflow_dispatch:
 
 jobs:
-  maintenance_workflow:
-    uses: getyourguide/java-actions/.github/workflows/reusable-java-repo-maintenance-workflow.yml@v1.1.0
-    name: Maintenance
-    secrets:
-      CODEARTIFACT_AUTH_TOKEN: ${{ secrets.CODEARTIFACT_AUTH_TOKEN }}
-
+  dependency-submission:
+    name: Dependency Submission
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4.2.1
+      - uses: actions/setup-java@v4.4.0
+        name: Setup Java
+        with:
+          distribution: temurin
+          java-version: 17
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v4.1.0
+        with:
+          gradle-version: wrapper
+          dependency-graph: generate-and-submit
+          # Include only relevant configurations
+          dependency-graph-include-configurations: '(implementation|api|compileClasspath|runtimeClasspath)'
