--- a/spring-boot-starter/spring-boot-starter-web/build.gradle
+++ b/spring-boot-starter/spring-boot-starter-web/build.gradle
@@ -21,8 +21,8 @@ dependencies {
     // TODO use spotbugs instead and also apply to all modules?
     implementation(libs.find.bugs)
 
-    testImplementation project(':test:test-utils')
-    testImplementation project(':test:openapi-web')
+    testImplementation(testFixtures(project(':test:test-utils')))
+    testImplementation(testFixtures(project(':test:openapi-web')))
     testImplementation 'org.springframework:spring-web'
     testImplementation 'org.springframework:spring-webmvc'
     testImplementation 'org.apache.tomcat.embed:tomcat-embed-core' // For jakarta.servlet.ServletContext
