--- a/spring-boot-starter/spring-boot-starter-webflux/build.gradle
+++ b/spring-boot-starter/spring-boot-starter-webflux/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     // TODO use spotbugs instead and also apply to all modules?
     implementation(libs.find.bugs)
 
-    testImplementation project(':test:test-utils')
-    testImplementation project(':test:openapi-webflux')
+    testImplementation(testFixtures(project(':test:test-utils')))
+    testImplementation(testFixtures(project(':test:openapi-webflux')))
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.apache.tomcat.embed:tomcat-embed-core' // For jakarta.servlet.ServletContext
