[CHK-11672][CHK-11673] Update logback (security) - also on spring dependency management

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ subprojects {
                 def minimum = parse('1.5.15')
                 if (current < minimum) {
                     details.useVersion '1.5.15'
+                    details.because 'Security requirement: forcing logback version'
                 }
             }
         }
