--- a/.github/workflows/repository-maintenance.yml
+++ b/.github/workflows/repository-maintenance.yml
@@ -5,6 +5,12 @@ on:
     branches: ['main']
   workflow_dispatch:
 
+permissions:
+  actions: read
+  contents: write
+  pull-requests: read
+  id-token: write
+
 concurrency:
   group: ${{ github.workflow }}${{ github.ref_name != github.event.repository.default_branch && github.ref || github.run_id }}
   cancel-in-progress: ${{ github.ref_name != github.event.repository.default_branch }}
