--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ subprojects {
             // Testing
             testImplementation(libs.junit.jupiter.api)
             testRuntimeOnly(libs.junit.jupiter.engine)
+            testRuntimeOnly(libs.junit.platform.launcher)
             testImplementation(libs.mockito.core)
             testImplementation(libs.mockito.junit.jupiter)
         }
