Also add constraints for security alerts

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,16 @@ subprojects {
         annotationProcessor(libs.lombok)
         testCompileOnly(libs.lombok)
         testAnnotationProcessor(libs.lombok)
+
+        // Security constraintsAdd commentMore actions
+        constraints {
+            implementation("org.springframework:spring-web:6.2.8") {
+                because("versions below 6.2.8 have security vulnerabilities including CVE-2024-38820 - see dependabot #12")
+            }
+            implementation("org.apache.tomcat.embed:tomcat-embed-core:10.1.42") {
+                because("versions below 10.1.42 have security vulnerabilities including CVE-2024-56337 - see dependabot #13")
+            }
+        }
     }
 
     checkstyle {
