--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     alias(libs.plugins.nexus.publish)
 }
 
-ext['spring-framework.version'] = '6.2.8'
+ext['spring-framework.version'] = '6.2.10'
 ext['tomcat.version'] = '10.1.42'
 
 apply from: "${rootDir}/gradle/publish-root.gradle"
@@ -71,6 +71,9 @@ subprojects {
         constraints {
             implementation("org.springframework:spring-web:6.2.10") {
                 because("versions below 6.2.8 have security vulnerabilities including CVE-2024-38820 - see dependabot #12")
+            }
+            implementation("org.springframework:spring-webmvc:6.2.10") {
+                because("versions below 6.2.10 have Path Traversal Vulnerability CVE-2025-41242 - see dependabot #247")
             }
             implementation("org.apache.tomcat.embed:tomcat-embed-core:11.0.10") {
                 because("versions below 10.1.42 have security vulnerabilities including CVE-2024-56337 - see dependabot #13")
