--- a/examples/examples-common/build.gradle
+++ b/examples/examples-common/build.gradle
@@ -1,4 +1,3 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
     id 'java-library'
@@ -6,7 +5,7 @@ plugins {
 }
 
 dependencies {
-    implementation platform(SpringBootPlugin.BOM_COORDINATES)
+    implementation platform("com.getyourguide.java.bom:gyg-spring-lib-bom:1.1.0")
     implementation project(':openapi-validation-api')
     implementation 'org.springframework.boot:spring-boot-starter'
 }
