--- a/metrics-reporter/metrics-reporter-datadog-spring-boot/build.gradle
+++ b/metrics-reporter/metrics-reporter-datadog-spring-boot/build.gradle
@@ -1,4 +1,3 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
     alias(libs.plugins.spring.boot) apply false
@@ -7,7 +6,7 @@ plugins {
 apply from: "${rootDir}/gradle/publish-module.gradle"
 
 dependencies {
-    implementation platform(SpringBootPlugin.BOM_COORDINATES)
+    implementation platform("com.getyourguide.java.bom:gyg-spring-lib-bom:1.1.0")
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
     testImplementation 'org.springframework.boot:spring-boot-test'
 
