--- a/spring-boot-starter/spring-boot-starter-core/build.gradle
+++ b/spring-boot-starter/spring-boot-starter-core/build.gradle
@@ -1,4 +1,3 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
     alias(libs.plugins.spring.boot) apply false
@@ -7,7 +6,7 @@ plugins {
 apply from: "${rootDir}/gradle/publish-module.gradle"
 
 dependencies {
-    compileOnly platform(SpringBootPlugin.BOM_COORDINATES)
+    compileOnly platform("com.getyourguide.java.bom:gyg-spring-lib-bom:1.1.0")
 
     api project(':openapi-validation-api')
     implementation project(':openapi-validation-core')
@@ -18,6 +17,6 @@ dependencies {
     // TODO use spotbugs instead and also apply to all modules?
     implementation(libs.find.bugs)
 
-    testImplementation platform(SpringBootPlugin.BOM_COORDINATES)
+    testImplementation platform("com.getyourguide.java.bom:gyg-spring-lib-bom:1.1.0")
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
