--- a/test/test-utils/build.gradle
+++ b/test/test-utils/build.gradle
@@ -1,5 +1,3 @@
-import org.springframework.boot.gradle.plugin.SpringBootPlugin
-
 plugins {
     id 'java-library'
     id 'java-test-fixtures'
@@ -7,7 +5,7 @@ plugins {
 }
 
 dependencies {
-    testFixturesImplementation platform(SpringBootPlugin.BOM_COORDINATES)
+    testFixturesImplementation platform("com.getyourguide.java.bom:gyg-spring-lib-bom:1.1.0")
 
     testFixturesCompileOnly(libs.lombok)
     testFixturesAnnotationProcessor(libs.lombok)
